style: remove border of a send button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -393,6 +393,7 @@
 .contact-submit {
     float: right;
     padding: 8px 16px;
+    border: none;
     margin-top: 16px;
     margin-bottom: 16px;
     color: #ffffff;
