--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,17 +21,22 @@
 
 .row {
     display: flex;
-    margin-left: -8px;
-    margin-right: -8px;
+    flex-wrap: wrap;
+    margin-left: -16px;
+    margin-right: -16px;
 }
 
 .col {
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.col-4 {
+    flex: 0 0 33.33333%;
 }
 
 .col-6 {
-    flex: 50%;
+    flex: 0 0 50%;
 }
 
 .col-12 {
@@ -177,17 +182,15 @@
     text-align: justify;
 }
 
-.members {
-    display: flex;
-    padding: 32px 0;
-    justify-content: space-around;
+.member {
+    text-align: center;
 }
 
-.members__item-name {
-    margin: 15px 0;;
+.member__name {
+    margin: 15px 0;
 }
 
-.members__item-image {
+.member__image {
     width: 154px;
     border-radius: 5px;
 }
