--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -20,7 +20,10 @@
 
 /* tablet */
 @media (min-width: 740px) and (max-width: 1023px) {
-
+    .content {
+        padding-left: 32px;
+        padding-right: 32px;
+    }
 }
 
 /* mobile */
