--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -14,6 +14,10 @@
     }
 
     /* contact */
+    .contact-us {
+        line-height: 2;
+    }
+
     .contact-name {
         margin-bottom: 8px;
     }
@@ -26,13 +30,17 @@
 
 }
 
-
 /* tablet */
 @media (min-width: 740px) and (max-width: 1023px) {
     /* common */
     .content {
         padding-left: 32px;
         padding-right: 32px;
+    }
+
+    /* contact */
+    .contact-us {
+        line-height: 2.5;
     }
 }
 
