--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,10 +1,10 @@
 /* pc */
-@media (min-width: 1024px) {
+@media (min-width: 64em) {
 
 }
 
 /* tablet and mobile */
-@media (max-width: 1023px) {
+@media (max-width: 63.9375em) {
     /* tour */
     .tour-detail__btn,
     .contact-submit,
@@ -31,7 +31,7 @@
 }
 
 /* tablet */
-@media (min-width: 740px) and (max-width: 1023px) {
+@media (min-width: 46.25em) and (max-width: 63.9375em) {
     /* common */
     .content {
         padding-left: 32px;
@@ -45,7 +45,7 @@
 }
 
 /* mobile */
-@media (max-width: 739px) {
+@media (max-width: 46.1875em) {
     /* common */
     .content {
         padding-left: 16px;
